<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/home_icon" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_compass_icon"
        android:title="@string/compass_icon" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_record_icon"
        android:title="@string/record_icon" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_personal_account_icon"
        android:title="@string/personal_account" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_icon"
        android:title="@string/settings_icon" />
</menu>