<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/record_summary_fragment"
    android:layout_width="327dp"
    android:layout_height="160dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="327dp"
        android:layout_height="160dp"
        android:background="@color/bikepacker_purple">

        <ImageButton
            android:id="@+id/favourite_tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="57dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/record_icon"
            android:elevation="10dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_favourite_tracks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourite_tracks"
            android:elevation="10dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_start_new_track"
            android:translationZ="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/favourite_tracks"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/start_route"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@+id/record"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
