<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/record_summary_fragment"
    android:layout_width="327dp"
    android:layout_height="454dp"
    android:layout_marginBottom="16dp"
    android:alpha="0.9"
    android:theme="@style/Button.Grey"
    app:cardBackgroundColor="@color/bikepacker_purple"
    app:cardCornerRadius="8dp"
    app:circularflow_defaultRadius="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="170dp"
            android:layout_height="58dp"
            android:fontFamily="@font/baloo_bhai_2"
            android:gravity="center"
            android:text="@string/track_recorded"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/accept_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/grey_main"
            android:backgroundTint="@color/grey_main"
            android:backgroundTintMode="add"
            android:fontFamily="sans-serif-light"
            android:hapticFeedbackEnabled="true"
            android:shadowColor="@color/black"
            android:text="@string/accept"
            android:textColor="@color/bikepacker_purple"
            android:textSize="20sp"
            android:theme="@style/Button.Grey"
            android:visibility="invisible"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="291dp"
            android:layout_height="316dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/grey_main"
            android:fadingEdgeLength="20dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/accept_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.9"
                android:elevation="10dp"
                android:fadingEdgeLength="10dp">

                <TextView
                    android:id="@+id/distanse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="start|center_vertical"
                    android:shadowColor="@color/bikepacker_purple"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="32"
                    android:text="@string/distance"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.142"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center_vertical"
                    android:shadowColor="@color/bikepacker_purple"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="32"
                    android:text="@string/time"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.142"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/distanse" />

                <TextView
                    android:id="@+id/avg_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="start|center_vertical"
                    android:shadowColor="@color/bikepacker_purple"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="32"
                    android:text="@string/average_speed"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.198"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="261dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/baloo_bhai_2"
                    android:gravity="center_horizontal|center_vertical"
                    android:shadowColor="@color/bikepacker_purple"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="32"
                    android:text="@string/rate"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/complexity_rating_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <RatingBar
                    android:id="@+id/complexity_rating_bar"
                    style="@style/CustomRatingBarStyle"
                    android:layout_width="243dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:clickable="true"
                    android:contentDescription="TODO"
                    android:elevation="10dp"
                    android:focusable="true"
                    android:foregroundGravity="center"
                    android:numStars="5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>